ARM: configs: aspeed: Enable CONFIG_MDIO_ASPEED
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/arch/arm/configs/aspeed_g5_defconfig
+++ b/arch/arm/configs/aspeed_g5_defconfig
@@ -119,6 +119,7 @@ CONFIG_FTGMAC100=y
 # CONFIG_NET_VENDOR_SYNOPSYS is not set
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
+CONFIG_MDIO_ASPEED=y
 CONFIG_BROADCOM_PHY=y
 CONFIG_REALTEK_PHY=y
 # CONFIG_USB_NET_DRIVERS is not set
