wip: ARM: dts: aspeed: Add mdio node to AST2600
Signed-off-by: Andrew Jeffery <andrew@aj.id.au>

--- a/arch/arm/boot/dts/aspeed-ast2600-evb.dts
+++ b/arch/arm/boot/dts/aspeed-ast2600-evb.dts
@@ -22,3 +22,15 @@
         };
 };
 
+&mdio0 {
+        status = "enabled";
+
+        ethphy0: ethernet-phy@0 {
+                compatible = "ethernet-phy-ieee802.3-c22";
+                reg = <0>;
+        };
+};
+
+&mac0 {
+        phy-handle = <&ethphy0>;
+};
