--- a/arch/arm/boot/dts/aspeed-g4.dtsi
+++ b/arch/arm/boot/dts/aspeed-g4.dtsi
@@ -434,21 +434,12 @@
 };
 
 &i2c {
-	i2c_gr: i2c-global-regs@0 {
-		compatible = "aspeed,ast2400-i2c-gr", "syscon";
+	i2c_ic: interrupt-controller@0 {
+		#interrupt-cells = <1>;
+		compatible = "aspeed,ast2400-i2c-ic";
 		reg = <0x0 0x40>;
-
-		#address-cells = <1>;
-		#size-cells = <1>;
-		ranges = <0x0 0x0 0x40>;
-
-		i2c_ic: interrupt-controller@0 {
-			#interrupt-cells = <1>;
-			compatible = "aspeed,ast2400-i2c-ic";
-			reg = <0x0 0x4>;
-			interrupts = <12>;
-			interrupt-controller;
-		};
+		interrupts = <12>;
+		interrupt-controller;
 	};
 
 	i2c0: i2c-bus@40 {
@@ -456,8 +447,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x40 0x40>, <0x800 0x80>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x40 0x40>;
 		compatible = "aspeed,ast2400-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -473,8 +463,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x80 0x40>, <0x880 0x80>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x80 0x40>;
 		compatible = "aspeed,ast2400-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -490,8 +479,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0xc0 0x40>, <0x900 0x80>;
-		reg-names = "bus-regs", "buf";
+		reg = <0xc0 0x40>;
 		compatible = "aspeed,ast2400-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -508,8 +496,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x100 0x40>, <0x980 0x80>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x100 0x40>;
 		compatible = "aspeed,ast2400-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -526,8 +513,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x140 0x40>, <0xa00 0x80>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x140 0x40>;
 		compatible = "aspeed,ast2400-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -544,8 +530,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x180 0x40>, <0xa80 0x80>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x180 0x40>;
 		compatible = "aspeed,ast2400-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -562,8 +547,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x1c0 0x40>, <0xb00 0x80>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x1c0 0x40>;
 		compatible = "aspeed,ast2400-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -580,8 +564,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x300 0x40>, <0xb80 0x80>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x300 0x40>;
 		compatible = "aspeed,ast2400-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -598,8 +581,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x340 0x40>, <0xc00 0x80>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x340 0x40>;
 		compatible = "aspeed,ast2400-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -616,8 +598,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x380 0x40>, <0xc80 0x80>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x380 0x40>;
 		compatible = "aspeed,ast2400-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -634,8 +615,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x3c0 0x40>, <0xd00 0x80>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x3c0 0x40>;
 		compatible = "aspeed,ast2400-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -652,8 +632,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x400 0x40>, <0xd80 0x80>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x400 0x40>;
 		compatible = "aspeed,ast2400-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -670,8 +649,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x440 0x40>, <0xe00 0x80>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x440 0x40>;
 		compatible = "aspeed,ast2400-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -688,8 +666,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x480 0x40>, <0xe80 0x80>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x480 0x40>;
 		compatible = "aspeed,ast2400-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
