--- a/arch/arm/boot/dts/aspeed-g5.dtsi
+++ b/arch/arm/boot/dts/aspeed-g5.dtsi
@@ -556,21 +556,12 @@
 };
 
 &i2c {
-	i2c_gr: i2c-global-regs@0 {
-		compatible = "aspeed,ast2500-i2c-gr", "syscon";
+	i2c_ic: interrupt-controller@0 {
+		#interrupt-cells = <1>;
+		compatible = "aspeed,ast2500-i2c-ic";
 		reg = <0x0 0x40>;
-
-		#address-cells = <1>;
-		#size-cells = <1>;
-		ranges = <0x0 0x0 0x40>;
-
-		i2c_ic: interrupt-controller@0 {
-			#interrupt-cells = <1>;
-			compatible = "aspeed,ast2500-i2c-ic";
-			reg = <0x0 0x4>;
-			interrupts = <12>;
-			interrupt-controller;
-		};
+		interrupts = <12>;
+		interrupt-controller;
 	};
 
 	i2c0: i2c-bus@40 {
@@ -578,8 +569,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x40 0x40>, <0x200 0x10>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x40 0x40>;
 		compatible = "aspeed,ast2500-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -595,8 +585,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x80 0x40>, <0x210 0x10>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x80 0x40>;
 		compatible = "aspeed,ast2500-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -612,8 +601,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0xc0 0x40>, <0x220 0x10>;
-		reg-names = "bus-regs", "buf";
+		reg = <0xc0 0x40>;
 		compatible = "aspeed,ast2500-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -630,8 +618,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x100 0x40>, <0x230 0x10>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x100 0x40>;
 		compatible = "aspeed,ast2500-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -648,8 +635,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x140 0x40>, <0x240 0x10>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x140 0x40>;
 		compatible = "aspeed,ast2500-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -666,8 +652,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x180 0x40>, <0x250 0x10>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x180 0x40>;
 		compatible = "aspeed,ast2500-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -684,8 +669,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x1c0 0x40>, <0x260 0x10>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x1c0 0x40>;
 		compatible = "aspeed,ast2500-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -702,8 +686,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x300 0x40>, <0x270 0x10>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x300 0x40>;
 		compatible = "aspeed,ast2500-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -720,8 +703,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x340 0x40>, <0x280 0x10>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x340 0x40>;
 		compatible = "aspeed,ast2500-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -738,8 +720,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x380 0x40>, <0x290 0x10>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x380 0x40>;
 		compatible = "aspeed,ast2500-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -756,8 +737,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x3c0 0x40>, <0x2a0 0x10>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x3c0 0x40>;
 		compatible = "aspeed,ast2500-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -774,8 +754,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x400 0x40>, <0x2b0 0x10>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x400 0x40>;
 		compatible = "aspeed,ast2500-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -792,8 +771,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x440 0x40>, <0x2c0 0x10>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x440 0x40>;
 		compatible = "aspeed,ast2500-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
@@ -810,8 +788,7 @@
 		#size-cells = <0>;
 		#interrupt-cells = <1>;
 
-		reg = <0x480 0x40>, <0x2d0 0x10>;
-		reg-names = "bus-regs", "buf";
+		reg = <0x480 0x40>;
 		compatible = "aspeed,ast2500-i2c-bus";
 		clocks = <&syscon ASPEED_CLK_APB>;
 		resets = <&syscon ASPEED_RESET_I2C>;
